--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-  <title> class site </title> 
+  <title> class site </title>
 </head>
- 
+
  <body>
-  <h1> Yaniza's class site </h1>
+  <h1> Yaniza's class site for homework </h1>
 </body>
 
 </html>
