--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
  <body>
-  <h1> Yaniza's class site for homework </h1>
+  <h1> Yaniza's class site for homework. </h1>
 </body>
 
 </html>
