--- a/hw/resume/index.html
+++ b/hw/resume/index.html
@@ -8,20 +8,19 @@
 </head>
 
 <body>
-  <center>
+
     <h1>Yaniza Creamer</h1>
-  </center>
-  <center>
+
     <h2>Public Relations</h2>
-  </center>
 
 
 
 
-      <center><img width="200"=100 hspace=100 align src="../images/yani.18.36 PM.png" alt=""></center><tr>
+
+    <img width="200"src="../images/yani.18.36 PM.png" alt=""><tr>
 
 
-  <center>
+
     <h4>About Me</h4>
     <address>1101 Stanford Drive, Coral Gables 33146
     </address>
