--- a/hw/resume/index.html
+++ b/hw/resume/index.html
@@ -12,26 +12,15 @@
     <h1>Yaniza Creamer</h1>
 
     <h2>Public Relations</h2>
-
-
-
-
-
-    <img width="200"src="../images/yani.18.36 PM.png" alt=""><tr>
-
-
+<img width="200" src="../images/yani.png" alt="">
 
     <h4>About Me</h4>
     <address>1101 Stanford Drive, Coral Gables 33146
     </address>
-    <table border="5">
-
-    <tr>
+    <table>
       <th>Info</th>
       <th>Education</th>
 
-
-    </tr>
     <tr>
       <td>774-329-3828</td>
       <td>University of Miami 2018-Present</td>
@@ -40,22 +29,16 @@
     <tr>
       <td>ycreamer@gmail.com</td>
       <td>American University 2015-2018</td>
-
   </tr>
-
 </table>
 
-    </center>
+
 
   <p>
-    <center>Hi, My name is Yaniza Creamer and I am a junior at the University of Miami. I grew up in Worcester, MA and recently moved to Florida about two years ago. I am bilingual and enjoy teaching my friends how to speak spanish. Throughout my
+    Hi, My name is Yaniza Creamer and I am a junior at the University of Miami. I grew up in Worcester, MA and recently moved to Florida about two years ago. I am bilingual and enjoy teaching my friends how to speak spanish. Throughout my
       professional career I have developed a great work ethic, a multitude of communication skills and a passion for helping others. As a Public Relations major for me the important concept is putting people’s needs before mine and making them feel
-      satisfied.</center>
-  </p>
+      satisfied.</p>
   <hr>
-
-
-
       <h3><u>Customer Service Representative</u></h3>
       <address> University of Miami (June-Current 2019) <br>Coral Gables, FL
     </address>
@@ -65,8 +48,6 @@
           Served as a liaison between Enrollement Management and Financial Aid.</p>
       </li>
     </ul>
-
-
 
     <address> Hair Design Zone (June-August 2016)<br> Rockville, MD
     </address>
@@ -119,7 +100,9 @@
  <address>American University (January-May 2016)
 
  </address>
- <li>VP of Marketing for Chi-Omega</li>
+ <ul>
+   <li>VP of Marketing for Chi-Omega</li>
+ </ul>
 
    <a href="http://americanchio.tumblr.com">Chi-Omega Tumblr</a>
    <hr>
@@ -128,26 +111,18 @@
 
 
 
-        <li>Spanish(fluent)</li>
 
-        <li>Leadership</li>
-
-
-        <li>Microsoft Word</li>
+<ul>
 
 
-        <li>PowerPoint</li>
-
-
-        <li>Excel</li>
-
-
-        <li>Event Planning</li>
-
-        <li>Creativity</li>
-
-
-    </ul>
+          <li>Spanish(fluent)</li>
+          <li>Leadership</li>
+          <li>Microsoft Word</li>
+          <li>PowerPoint</li>
+          <li>Excel</li>
+          <li>Event Planning</li>
+          <li>Creativity</li>
+</ul>
 
 
 
