--- a/hw/resume_css/index.html
+++ b/hw/resume_css/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Yaniza Creamer">
-
   <title>Yaniza Creamer's Resume</title>
-  <!-- insert title above -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -17,23 +16,20 @@
 <img width="200" src="../images/yani.png" alt="">
 
     <h4>About Me</h4>
-
     <address>1101 Stanford Drive, Coral Gables 33146
     </address>
     <table>
-      <tr>
-        <th>Info</th>
-        <th>Education</th>
-      </tr>
+      <th>Info</th>
+      <th>Education</th>
 
     <tr>
       <td>774-329-3828</td>
-      <td>University of Miami <i>2018-Present</i></td>
+      <td>University of Miami 2018-Present</td>
 
     </tr>
     <tr>
       <td>ycreamer@gmail.com</td>
-      <td>American University <i>2015-2018</i></td>
+      <td>American University 2015-2018</td>
   </tr>
 </table>
 
