--- a/hw/resume_css/index.html
+++ b/hw/resume_css/index.html
@@ -4,45 +4,62 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Yaniza Creamer">
+
   <title>Yaniza Creamer's Resume</title>
-  <link rel="stylesheet" href="styles.css">
+  <!-- insert title above -->
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
+  <div class="title">
+    <header>
     <h1>Yaniza Creamer</h1>
+  </header>
+    </div>
+    <div id="colorbar"></div>
 
-    <h2>Public Relations</h2>
-<img width="200" src="../images/yani.png" alt="">
 
-    <h4>About Me</h4>
-    <address>1101 Stanford Drive, Coral Gables 33146
-    </address>
-    <table>
-      <th>Info</th>
-      <th>Education</th>
+    <h2 class="title">Public Relations</h2>
+
+<img width="200" src="../images/yani.png" alt="" class="center">
+
+    <h4 class="title">About Me</h4>
+
+  <b><address class="center">
+  1101 Stanford Drive, Coral Gables 33146
+    </address></b>
+
+    <table class="center" border="5">
+      <tr>
+        <th>Info</th>
+        <th>Education</th>
+      </tr>
 
     <tr>
       <td>774-329-3828</td>
-      <td>University of Miami 2018-Present</td>
+      <td>University of Miami <i>2018-Present</i></td>
 
     </tr>
     <tr>
       <td>ycreamer@gmail.com</td>
-      <td>American University 2015-2018</td>
+      <td>American University <i>2015-2018</i></td>
   </tr>
 </table>
 
 
 
   <p>
-    Hi, My name is Yaniza Creamer and I am a junior at the University of Miami. I grew up in Worcester, MA and recently moved to Florida about two years ago. I am bilingual and enjoy teaching my friends how to speak spanish. Throughout my
-      professional career I have developed a great work ethic, a multitude of communication skills and a passion for helping others. As a Public Relations major for me the important concept is putting people’s needs before mine and making them feel
+    Hi, My name is Yaniza Creamer and I am a junior at the University of Miami. Throughout my professional career I have developed a great work ethic, a multitude of communication skills and a passion for helping others. As a Public Relations major for me the important concept is putting people’s needs before mine and making them feel
       satisfied.</p>
-  <hr>
-      <h3><u>Customer Service Representative</u></h3>
-      <address> University of Miami (June-Current 2019) <br>Coral Gables, FL
-    </address>
+<div id="divider">
+
+
+
+ <h3><u>Customer Service Representative</u></h3>
+
+
+    <b><address>  University of Miami (June-Current 2019) <br>Coral Gables, FL
+    </address></b>
     <ul>
       <li>
         <p>Entered and processed data as well as assisted with phone calls.
@@ -50,8 +67,8 @@
       </li>
     </ul>
 
-    <address> Hair Design Zone (June-August 2016)<br> Rockville, MD
-    </address>
+  <b><address> Hair Design Zone (June-August 2016)<br> Rockville, MD
+    </address></b>
     <ul>
       <li>
         <p>Greeted customers, assisted with phone calls, managed calendar and appointments.</p>
@@ -63,13 +80,13 @@
       <u>Server</u>
     </h3>
 
-    <address>Chevy Chase Club (April-August 2017) <br>Chevy Chase, MD
-    </address>
+  <b><address>Chevy Chase Club (April-August 2017) <br>Chevy Chase, MD
+    </address></b>
     <ul>
       <li>
         <p> Greeted and waited on club members.
           Exhibited exceptional customer service skills.
-          Received employee of the month for dedicated service and outstanding performance. <a href="https://chevychaseclub.org">ChevyChaseClub</a></p>
+          Received employee of the month for dedicated service and outstanding performance. <a href="https://chevychaseclub.org" style="text-decoration: none;">ChevyChaseClub</a></p>
       </li>
     </ul>
 
@@ -78,24 +95,25 @@
     </h3>
 
 
-    <address> Poggi Residence (April-August 2017)<br>Chevy Chase, MD
-    </address>
+  <b><address> Poggi Residence (April-August 2017)<br>Chevy Chase, MD
+    </address></b>
     <ul>
       <li>
         <p>Live-in household caregiver. Offered companionship to a heavily disabled veteran. Managed multi-million-dollar household; paid bills and managed daily calendar.</p>
       </li>
     </ul>
 
-    <address> Yoon Residence (May-September 2016) <br>Rockville, MD
-    </address>
+  <b><address> Yoon Residence (May-September 2016) <br>Rockville, MD
+    </address></b>
     <ul>
       <li>
         <p>Live-in household caregiver. Offered companionship to a two-year-old.
           Responsibilities includes; driving child around to appointments, park and other activities.</p>
       </li>
     </ul>
-      <hr>
+      <div id="colorbar"></div>
 
+<div class="right">
     <h3>Activities</h3>
  <p>Leadership and Community Involvement</p>
  <address>American University (January-May 2016)
@@ -105,25 +123,25 @@
    <li>VP of Marketing for Chi-Omega</li>
  </ul>
 
-   <a href="http://americanchio.tumblr.com">Chi-Omega Tumblr</a>
-   <hr>
+   <a href="http://americanchio.tumblr.com" style="text-decoration:none;">Chi-Omega Tumblr</a>
 
+     <div id="colorbar"></div>
+   <section>
+</div>
+
+<div clas="left">
     <h3>Skills</h3>
 
+ <ol>
+  <div id="skills">
+  <li>Spanish(fluent)</li>
+  <li>Great Communication</li>
+  <li>Word</li>
+  <li>Event Planning</li></div>
+ </ol>
 
 
 
-<ul>
-
-
-          <li>Spanish(fluent)</li>
-          <li>Leadership</li>
-          <li>Microsoft Word</li>
-          <li>PowerPoint</li>
-          <li>Excel</li>
-          <li>Event Planning</li>
-          <li>Creativity</li>
-</ul>
 
 
 
