--- a/hw/resume/index.html
+++ b/hw/resume/index.html
@@ -7,6 +7,7 @@
 
   <title>Yaniza Creamer's Resume</title>
   <!-- insert title above -->
+<link rel="stylesheet" href="/css/master.css">
 </head>
 
 <body>
